# ChangeLog for app-shells/bash
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.374 2014/07/08 08:54:50 polynomial-c Exp $

*bash-4.3_p18-r3 (08 Jul 2014)

  08 Jul 2014; Lars Wendler <polynomial-c@gentoo.org> -bash-4.3_p18.ebuild,
  -bash-4.3_p18-r1.ebuild, +bash-4.3_p18-r3.ebuild,
  +files/bash-4.3-lastpipe-nested-pipe-segfault.patch:
  Revbump to fix a segfault in lastpipe mode. Removed old.

*bash-4.3_p18-r2 (17 Jun 2014)

  17 Jun 2014; Mike Frysinger <vapier@gentoo.org> +bash-4.3_p18-r2.ebuild,
  +files/bash-4.3-compat-lvl.patch, +files/bash-4.3-parse-time-keyword.patch:
  Fix plugins handling and add some fixes from upstream.

*bash-4.3_p18-r1 (05 Jun 2014)

  05 Jun 2014; Lars Wendler <polynomial-c@gentoo.org> +bash-4.3_p18-r1.ebuild,
  +files/bash-4.3-here-doc-ps2-comsub.patch:
  Added upstream fix.

*bash-4.3_p18 (18 May 2014)

  18 May 2014; Lars Wendler <polynomial-c@gentoo.org> -bash-4.3_p11-r4.ebuild,
  -bash-4.3_p11-r5.ebuild, +bash-4.3_p18.ebuild:
  Version bump. Removed old.

  14 May 2014; Lars Wendler <polynomial-c@gentoo.org> bash-4.3_p11-r5.ebuild,
  +files/bash-4.3-bind-compound-arry.patch,
  -files/bash-4.3-bind-compund-arry.patch:
  Fixed patchname.

*bash-4.3_p11-r5 (13 May 2014)

  13 May 2014; Lars Wendler <polynomial-c@gentoo.org> -bash-4.3_p11-r2.ebuild,
  +bash-4.3_p11-r5.ebuild, +files/bash-4.3-bind-compund-arry.patch:
  Added yet another upstream fix. Removed old.

*bash-4.3_p11-r4 (07 May 2014)

  07 May 2014; Lars Wendler <polynomial-c@gentoo.org> -bash-4.3_p11-r3.ebuild,
  +bash-4.3_p11-r4.ebuild, +files/bash-4.3-localvar-invisible.patch:
  Added another upstream fix. Removed old.

*bash-4.3_p11-r3 (07 May 2014)

  07 May 2014; Lars Wendler <polynomial-c@gentoo.org> -bash-4.3_p11-r1.ebuild,
  +bash-4.3_p11-r3.ebuild, +files/bash-4.3-extglob-directory.patch:
  Added another upstream fix. Removed old.

*bash-4.3_p11-r2 (26 Apr 2014)
