@@ -30,6 +30,7 @@ AUX bash-4.2-read-retry.patch 932 SHA256 37d60b456efd563960a9f1f3f40f0e7f6ef2f9a
 AUX bash-4.2-speed-up-read-N.patch 2858 SHA256 8547d32535ed4e2fe5cb7b3503e6044c3f5df3772079509bd02cec4177059dcf SHA512 6b7f611ac35746c5ce8caad49def25d060397d81844c0dda2ba7c73f4b0318a28b3fb89f356695c8a7799b70ab0591d9612619403b7d4ade8aba1e60a933fdae WHIRLPOOL da9647b199f090b358b8186187d9ceff6cc5dd7cb20885f7963c1a1b445bf833093c2db931763a9c05f2e4b87e9e1c201bd34a441c49a39703eca7f3c61b2d49
 AUX bash-4.3-compat-lvl.patch 628 SHA256 3303c12a499c5fb3f3c9ac7b11b020c83d4d4e3d672cc2df734709b22a6d92d7 SHA512 c552e1c7154d69201329f26e039c06a61e1bbaf5eaf16b7eea4f89d56aef0f710ebdfb115a1c00f07bd94893e51f9cbceee12bb57e51f6009c0e2327d53d7286 WHIRLPOOL 066fbb358f4fb9e32a58b4c4edd10d9c47c50f6aa202e0197c6b6d86a0836d48677561b834e5642b9052e64077efe240cb27144e5032c3e5f4bd9cb62201736e
 AUX bash-4.3-here-doc-ps2-comsub.patch 1110 SHA256 02e0ae122479b362d90351b5b2b697744f716ece1118b40ae2b9ec6cc18e87af SHA512 bb6cc52bce73f6384eb14d4aec5f9f6b20cc8766b20c5e196a07dc4e559266d6c79813ad1b10b6a40d6f92d2201206000f219fa3e40a5b3aad7ab5161ef033d4 WHIRLPOOL 256631146c70cef00f8ab305a512f03c7288eaaef339dcb2b37ea11ae21124f17c20183683c5a02c9beaff2f37f1432439bf89edf871703743b829ef5aa5f4c2
+AUX bash-4.3-indirect-array-element.patch 954 SHA256 407b2a8ecb505250e3eebcef74a429032ed900dfd8242502f7fa61a90caa89b6 SHA512 ce3c923fb0bcbef2c6794e3e142460aaeb99ae6ce747d9f59b78021930b410492d619c4c38882d9dde32056dd9d051f28efce8347d88cddbe07945caf96ce7a5 WHIRLPOOL 9b5ec389fe34b913bf32f83b08a7d66d850ecca35b698697b8758b61b4e94e52f38b5ab2c3da778deaba3e053b8707b17f599facbb9fc9f7e979b523a818c285
 AUX bash-4.3-lastpipe-nested-pipe-segfault.patch 933 SHA256 742a1e944a2f2c0eeb27e88850d2568a5cf46999cac0d5a9be15e0b2aad6ecf4 SHA512 579d90085e3ab3294ad5683a7ab5ece0674ca74074a508afdb13ede28e36d536e92db68427fcacec149d11b8acef7799d62246af3d8e3885ac744a017e2d60a0 WHIRLPOOL b3ab4114c4572d730172af435a23705e0d8ce0b069badec48799367f2b00f497514e7226ea2e1ba471e2ff69ed7052fa3dee41b9f67a7a74e0fdd93005d2d4a4
 AUX bash-4.3-parse-time-keyword.patch 790 SHA256 44c83641d4f8e7357b0b63b1a5095e751643c30f84fdf5dbc868c9d4a200c15d SHA512 070ab4a46adec60434ef45e04ca0d453fd02c40da8db7051800160c8fa8d3846a6e6bf57db02c583fd699eab69fa03b268107dc58e3332d2f7ed66f00432d6cd WHIRLPOOL ab37acf37bf497bc7c041f341b44dbd755d6e0170d8b74436d79aa63aac1c3cf35c13bd0c56a4eae071639bac27ea81a194c691c42fd4089de8df859745caf5c
 AUX bash-4.x-deferred-heredocs.patch 1255 SHA256 845ffcd7035eef5dc029747f211a737e0260b53b16086a37fb3c8ab3609a7d36 SHA512 9016203189d0b601f0441daec19f902de7387b599a2196c475d76c596dcf9a9c22765a58e7fc5a3117522ec2722475bd166bea271ff3048f31674e8bed2901a0 WHIRLPOOL f3a2ef5245c446b7e90917e987d80efba5e6437dbe86fc27bbd7768bc5f1e5f6e7663b350ca8a81a3f21a29af6e1594c14061be0d818fce6a4a63aed7efcb6fe
@@ -232,24 +233,24 @@ EBUILD bash-4.0_p38.ebuild 4464 SHA256 d6aa599f3e77808c09095c892c684a5a589fa7db9
 EBUILD bash-4.1_p11.ebuild 4199 SHA256 b6163a5d4aef950e3b5dad8c2590323549072b9f8819a939eda692fefccfb38c SHA512 06b47daa5e875b03408f2acc8108d52275a4e4681a0f88b9bd89ee43fb6db3d963b54086d0039c4bae90916b5b059bfdb53288877ffe3d08a0d4a91bcde634e5 WHIRLPOOL bf23eed9aba5773e423171c89ebeff05106864a4a3507ed186d1cbfd8fe982fc53e081b389937aaa7d6ee6ea54a98ecfc618a6fe67170ac9600573054bee3a8f
 EBUILD bash-4.2_p45.ebuild 6525 SHA256 784442914f6f6740031598a0cf1baaec087d973e6460d76a32baa120a2794b8e SHA512 8b6c57dead7a18b429632694e5d1e35791b262cd09c3d49919287c2b07ab9e524b9a758e247a8d2706ddfae2576d19e535c9467b7ef99ed08ddb041ef60025da WHIRLPOOL 55954d5cb13b064f89305af8c5de0c7f84714afb08c0f07bf4703ef62860cf08f9e9f38ba60a4e891d5cb0f26f0e46d26e2eea553b0785bc9e82d790b6c4d111
 EBUILD bash-4.2_p47.ebuild 6647 SHA256 c215fe883cd37a3aa70102401ecd2a153e8e0917b2430fecfe618ed3deef5710 SHA512 bc783f9287e7456f626e6caa55b83a50383289cca3899b8d6a0023e69e0335d498615156e997f1ce417408f7ae4cffe74e68cbcf4c1363e7c7c8df07b7f2ea74 WHIRLPOOL 848161565e680196e5e4e5b631a8a873c5425d0ed6658b9226d6b7371ce3f90f78501a6fd062894d02dc382412b53fb72ec45fea5eae4b19a9637cf2ef4a8851
-EBUILD bash-4.3_p18-r2.ebuild 7104 SHA256 d6d7543a9b46a9bfba42cc16b499bcdb10d269313b52a19e3eb5b472242f4f19 SHA512 d55bfa6cd53c37cf9099ca9ccb579e88e3de3e824f981a1821d7a7bed24b9854f6c46b82287cc1ccc295a0551869c6ec0f5b3b42fc04285bb25d1fd53c9c0f51 WHIRLPOOL d601c4043d9d818da0ba5c77b029d6bc44b2a23fb8dfd51ec82c45c1a04efd6de387c644f78676f943b7bcf3dc566344dea52b324550ac284ea9ef870558aed1
 EBUILD bash-4.3_p18-r3.ebuild 7178 SHA256 04741a424e238716f107af04c583a1827d015b54812b0c40761ff6c1838995a3 SHA512 e8cb449b787f497d1d6bfcc064ba20fea05d370a53009ece7cd4b94be25b4bdd5bbca89e58786a4d747910952f884e64e797775b3b6777564efc415e6cdd0390 WHIRLPOOL 13a9a181539f311c9ba90153f88168a766a1ba5722a9ced696d7f1def8ab3d585da0cc0e63a19d801fd7852610fec84dc115989b9b2227640d32871806ee13c1
-MISC ChangeLog 58589 SHA256 2f3e1d8c8e587a5130438225ff65bcead243b793306efcadf5232485051dc862 SHA512 f4f8e3bdf7af212fb5805eeecebd56daebe58958946003d7925c48e133330a0393dce3f1de98fb3597059ca66f9e02c2e0259718a1d14aed018db23706782a67 WHIRLPOOL 120aad9bd5858a18c3c4592ab111282aae11ad9394011cdf5ebf2fafffe9246d7368c91980999281d6b77c066b8b8488b29bead241b54ba42ec2de069155699a
+EBUILD bash-4.3_p18-r4.ebuild 7239 SHA256 803fbe2409df9f95cfa5a631589ae12c136e5ed16a5969d7a6179f4991b439b8 SHA512 2bb462f8941d78d5f8b5d9502244501ff6ff2cdeac14b36dd79abb115efc445a62e48a01cf88f1048f10ca506b3fd6d717f7c14af401a035f1c42edaee2beb81 WHIRLPOOL 5f9fc705c20445e95a46670cec648fb9d1a143f50ac46b0bcad36912512fe6127c96cf2b39608e7c99db89cfd40f731205c9e6c2068217da91885601ff0f2176
+MISC ChangeLog 58835 SHA256 9d19ad98b79f59bf7755efd63179ddae47a235dbbac0e8b4ff40432c9d13eaf0 SHA512 e44695ddec825df84cbfe28eb0117560209c3b3276a9c36b29bc3841acc91c97163cb904b88f4aeb7085cbea55661a346fec5ace520aca5bf9ae16b8592a9dc1 WHIRLPOOL 86a7b2b1911a0294e31dee82c180417a5115ad613868fab2ba0823257b1707e6470b26783bae1db70cf45f829c90284161a8177c39751922bb42842b66589d8c
 MISC metadata.xml 643 SHA256 928c1ec952dec872f913d5e121725431435f651a87e48e784617c49f9dcf806a SHA512 3eb4baf0efbee2606a1e56d0359c3489887fb3f2e0dfe9ba25b6143b9d5e02b8df06a8065019201184b1fca12b8a86d781a68131810b80784c678765d55df679 WHIRLPOOL 52aeb839d294d5f43af735698afb6ee8f99e388c86260e1a1cc0d8fa57671bb8bef36f09d3f7e84cb70bc5fba0d645b427033c13b6ebbc66f5520acb1985b8b6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTu7HbAAoJEPiazRVxLXTFIUcP/iI6cxNpJJO94ZKj764DykN2
-vbM80v6oPjdKJWgKmC9zkzgYlQHSXuYjuuex9bup0XGMrfZn563ctA10QfOWGGOn
-pFmpH8+xKE0wdlC9nefmMrAMdxfALqQdHN5tOndj/0LJEbw4iwGEQefU53znneFN
-8RZyoT7HRfynxPWfcFHavtDM6ETWxo+u9kQ6GJCNx6ILmuifxeT0rjtqbb2msVc2
-4BwZpeAXjoRfHKXqp6HGb1Hi1p/uQRgDhsouGLtklXQ+aZ/8jyXcjKW0lhobQcio
-js++ApaHlqt8kGx1vfFbm3CUgMm/wDy4EoTctqgXYZnEegZDwt2xzrvzQ1iSJMmW
-zC6lQ4ijw6ILYEPJgmVd8GGWT4bIZANDVnh0RIeW0Umv4r2nhwbRYTPPsO0np4nF
-xvc7kmigxuMDVHp5LXGKSsTTG2hGqCoy9HiQQMB5Q5qvpPB8YvqgEmmKT6gz8ZkU
-w6iVGDGjhMkadTmd2kXXLOfK+tfBDHNyxdGM3ZvEjbgXHTErUMrRskqX0c4VHFse
-UDJzCCD5hnYozwG//DI4dlM3+PXAp+PI6hTkM5jjPyHpUwZvYDrWdJUXyS9EI4cp
-CGbG8/KyTxLk7WTesA5hv1WaXAaZ2nOwJtQjNJ5wop3xB8z315E7ywihu1wNNLEJ
-5HkZR6IcauHvBI4HALqs
-=UtJ8
+iQIcBAEBCAAGBQJT0LFFAAoJEPiazRVxLXTFkOcQALfu29N0Dupxk3WXw75nfL8m
+BpISgFTcJKZb8kRpLQHSlr+0/y8Kej8pb64bYUjF0Vkr3CbrnTniQkQYpM/Cv+F4
+af8b56Yu5vLgRuWVja0qYieU6qSPX/RLm9NvxtHnax4zkc9FohTefEIyRINKKRlW
+c9ud14Cmpb93n2/XgK4Wzzdo0DU8OSbgFZUvm6/BimKjWDSxyYI+rOycxJluZBCt
+PnEShyJHzX3gMm3uVQxDLvqeXcED41Ms6det5cOgILKnpP1boGoVLngar0zXxqTV
+30s93lpMeo8i8j1dylpsNfy5799npVU/kapfEDP6drfLaDxFApKGN8KH0lLgHA+f
+Tu1E+EmEEqUWpEKloT56FeFTIJGR+2GZJ4b2pmIpgvFlsQq/G7Z0Yn2Xkjk9eK66
+dlr+Oh46r+ijZNbfB8TKSif5gpy6Mgzc2aUFOPCO8smw6sX1cDxFdln8xCt6bn2N
+2Nlfgsp1vvpSaLcRzLUY49dTF8JDOBbynPjtA/GHGV9+YfRdweSYf3rrmVAkJ3hY
+mua021siyDISl8peelUus/qJGaQaktjlbqxRIrfnYkUbQkpAhPwGMKpeynLwfJAe
+AoI17VQM5xJNzDD6eQ1GdA7sdmn/odR0gcgzck77+N5Ws8P0qv4smYyW3GY2wIGX
+bkcWPFdVL3uzprdW7FGC
+=5d8A
 -----END PGP SIGNATURE-----
