@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/bash-4.3_p18-r2.ebuild,v 1.1 2014/06/17 03:58:19 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/bash-4.3_p18-r4.ebuild,v 1.1 2014/07/24 07:09:55 polynomial-c Exp $
 
 EAPI="4"
 
@@ -86,6 +86,8 @@ src_prepare() {
 	epatch "${FILESDIR}"/${PN}-4.3-here-doc-ps2-comsub.patch
 	epatch "${FILESDIR}"/${PN}-4.3-compat-lvl.patch
 	epatch "${FILESDIR}"/${PN}-4.3-parse-time-keyword.patch
+	epatch "${FILESDIR}"/${PN}-4.3-lastpipe-nested-pipe-segfault.patch
+	epatch "${FILESDIR}"/${PN}-4.3-indirect-array-element.patch
 
 	epatch_user
 }
