@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst prepare setup
+DEPEND=tiff? ( media-libs/tiff:0 ) gd? ( media-libs/gd[jpeg,png] ) virtual/fortran
+DESCRIPTION=Generation high quality raster images of proteins or other molecules
+EAPI=5
+HOMEPAGE=http://www.bmsc.washington.edu/raster3d/raster3d.html
+IUSE=gd tiff
+KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux
+LICENSE=Artistic-2
+RDEPEND=tiff? ( media-libs/tiff:0 ) gd? ( media-libs/gd[jpeg,png] ) virtual/fortran
+SLOT=0
+SRC_URI=http://www.bmsc.washington.edu/raster3d/Raster3D_3.0-3.tar.gz -> Raster3D_3.0-3.tar
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	prefix	21058c21ca48453d771df15500873ede	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=c857194bbd7d00e71587454234ec7e67
