@@ -1,28 +1,32 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 2.9.1-as-needed.patch 1126 SHA256 b482bc2e1b6aea6144f8bb37beb6b9b98302067eb0d84c77d9e91cb9e6247176 SHA512 8f9e3bae741274e8426272b53ba8f33d8ec4e81a58832a4ff021abba1142d578fdd276836ccbadace2efb4ba42ae630fdf06adfb0e871eac813425230e9b5ebb WHIRLPOOL 87523cafdb558c9bc73fddb61c0277388c54752f0e6886ad0feae81cdc839a461567ec4eaf65ad659a08233874502a145e3d1f96b3adcf6823a611a958301e77
 AUX 3.0.2-as-needed.patch 1579 SHA256 9348541ca30f28466690e53e3fc94efdcbb4f9dec4cb25d5e959ea1c2c4722f4 SHA512 2898b55dca4e8d8d353922c36f44a9bb1dece19fa4c1de3f13ea5a09202004c10fbab6c2df2a39b71a65de3f30c19cd2724703b22b7ef978f366c69894761ce9 WHIRLPOOL e0205f149fd224e0164b51ea81b0c25700bbf915e77cca20510a76035c32a48301f4ac2552983b8608bff407b9997c77994ecf628a1df178329fa13ba73f0c69
 AUX 3.0.2-gentoo-prefix.patch 738 SHA256 4d7f94ad57280254177cfecec0f0a6f5610f1d3b4c7c4b7439ab68262e285515 SHA512 5cb22fdff116c6a84a9f570af99062c08463d391cb0460d06e64990eaab2c945e86f0b3f5a378144c49014c0c41dc70cafb102c5feba500c43c8555ce41612a0 WHIRLPOOL 32c239f5704ad67e87ca24313e15d70d1b5a395637f64191deb597787596ae47172373c78b5310ce1bb08aad5384c466a713f0738676e50deb1f0140a1165613
 AUX raster3d-gcc-4.1-gentoo.patch 2994 SHA256 b1a9ea24005c0ddb9fcd54e71196417186bea0a92b1bcf47ecea978d1faf2cc3 SHA512 ffedb840131db046e492842d3d656b574d444ddea8f6c20d672df18476b3791892f315598150978ee8208f6bf1a7d0dddf8a98060e44cc75dfac8c7deb604821 WHIRLPOOL e10415d2d7b1e130e8884a81b100af3a99ddad7152f4b668f37a0f7f906199d22a437b409ec8be7c9ad86d53e14678e2f6ae9cbd950d2d1ccd9b896173c29c1e
 DIST Raster3D_3.0-2.tar 1743034 SHA256 a89bdfda61fae8d189820941f1b5685b40743b817128f57bc1225f983a47d984 SHA512 f8f73cc91eae521839a9db8ee1a7a9d8727ed510cb574116d89e918480700d844691a6fc3c4a28cb54312b0133cc610422e55d99716803cf3e8bb5d9d934e37f WHIRLPOOL 58fc31cc438538715b1f0ea17a28b44294d78db32e40fa16f8ab5a5781e26198227c534f06b8d25072e6c6101a4c9255fa906b9fee57b128d0e767bc0e04db83
+DIST Raster3D_3.0-3.tar 1729356 SHA256 1e7d02cf17f2d14855b8d241269948b37ed4d3ae6395914b66ff9f95c3a7fecf SHA512 bd372c4ba8d40db38e19f520883ca71ab7c5ef7a451b67150894e229b45167dfe00b77c19e118afc6abdb9ac07800cc16de5d2dc82c3ef9baa751200490e40fa WHIRLPOOL ad7c11cfd42543845420dcffbc87024c60b3058a51663076ace63b2e2fc0fec81a342f7b4e54f535e03de14fb9e76eace65259cdd2e83a6e0e83810ac8280c10
 EBUILD raster3d-3.0.2.ebuild 2582 SHA256 d4ff00f5288f2c6c1c42e39ebd563b4923aa1e82c61dc6d50b300a51c7cce1ad SHA512 1239e4a910fb9eb3eae1c6fcd48b9bee8ed87de8fe4f075423d6a79dbd0019943f62740d9983ebb16a9d89141d337d29ad40de2eae72d224a0696903fae432f9 WHIRLPOOL e305f2187e6522cfa43599737c267289da02412beda422a65a100c57f18343ff556789060a20182ee9834e1c14f3c216e60698d868b59e4a1aa8fbf1fb7214a6
-MISC ChangeLog 5679 SHA256 66369f231ba59f91e115947907f75c7b1a13a305be1a54672b3552af5a8ad58d SHA512 9f275e034148ceae02734451a99b9bac5698fcb48ed9abe8ed82ce9493277ba57eaa48e6afbd10f7504e924ef5c43e37270fca9f19b5b4a4c36d18d7d061358c WHIRLPOOL ac2f1efe0563b7dafdc9dc2cbf338b8db8107f4f0290fd37ff2d7e6010c8aa7c37cbcafd07ea1eb96435686645919cb5e57bc67626ad26c8a750f8686d9b9c99
-MISC metadata.xml 347 SHA256 b5332048f95bb442b3715a550ff1217ab13dd4eb9bc860a6b43847c1e4f74e07 SHA512 c16efc2c1b929a9b50e5022069ca0876fb90fa56e76ef85cb23b2855aa3f03bbe99d80767256dd4c36ee0ae5c94300f61493e7b9b326d0b40894707e983ead69 WHIRLPOOL fc350816b5808cc5661bd0ea5298abc471ce9f45f7ca425cabdb47687c6db109992f801d5d6ba6dc71dd6c619c5123af74a9a661589e4ceeaf8045d99c10fd23
+EBUILD raster3d-3.0.3.ebuild 2585 SHA256 aabd221f74a2c4e7c3401d11d6e3aeb13b6ebdd5ea0d1b501cefef9875001f79 SHA512 d90cfb4266617594de9ca3cd6c95275116d517df8b155c4769575453f4d6655dd45e9bdc067d1dc593fc67e2fde1d2ec38553b7a685a1227ce2f5abbe6d4e154 WHIRLPOOL a1f0470f772e9891a86b5d67170851aabfca90f78dcb57ce5682700f3440c5a882f8fd49497eefcf98e7902ffe5e13f678101a21953a4ef4d81ffcfbb4a20ec3
+MISC ChangeLog 5814 SHA256 2c83dd0fad28791033b1bb6f611d758540025098a5abef3a4ba4b695254cbb8b SHA512 efb7a2ba0b8aa423b6783965e30a5010424c0bba06a21fc000c287884416af70c6d24277f2fe695f5b014bcc5659c008111582fae10f3c0548551705512d3fc8 WHIRLPOOL faa363a05672ccfd4bb3b1d2c786513528ca84db60e183d611f73b1378d672b63739cd5bef28c20179eda88c75435c0e0c7304c00227c24655875c493c093627
+MISC metadata.xml 356 SHA256 79447545cc6f12afca8027401826385566a2c0ab3535711150a9f75940666391 SHA512 12f489d14af9fd092a4e6072182b7f92ed413baee99515b32b7d7cba1801009c57c6cd2a62ebbd2731dcf87c631ded0fe0d0e4a129c68661954246a4e73dc2c6 WHIRLPOOL 272b096e751e0178437405be0bd8e1fdae9c859d0b1c6ba48de2002c28d77413b6506ca4b889017b31cba3018939e45247f0992071184a73407d2f4344750a9e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJQyvz3AAoJEDxpGckxwJCBWG8QAMUiYD1y0jxB7tvZYyB72Ftd
-rwQcTweGzuNz92gHY5hvdHBsxZATsccEDB/SOtzpYObaGvdA7JI3hdQwdoc8WYDl
-07ltVZ7GfyiJehPtKfa4bUpYx8npvggdtgpzBn+s+gCbDTMU6vLB/hvL66nk38nM
-2CnT+FK7ZL9j/rwkX8Db2R1iqQn8ou0ogW9fiw5C/qdNRiURzwMd6jrQ/V4LyAPv
-aMbOwpR/voKRfowmM8hqA7q1PkMZl9Ij0LO62nO0dkhrDfgYLSxNcvRZzjGK3evC
-r8glrSX5cwZ6XYOuYZkiIttB4H2OXIvcwJAle0spfX45Pt0YYHGGB/FgYCBnMTfp
-PvmV0L5+u3ZVkJl3jU1XazYTYURhEz1SuU2/TkOFrgiwT0zyfoZvQA/2f2wOg+c8
-3CKL5b/PBpuH5Rrs3SdAaeNnUTDPe5RdhaMAHD4JtgPh9DTSldNWZsd1FNmv2MYh
-V2h/ULKJJ821F8rHzCEjz+i+B2vPWq6JTWyP97e7VcummD10TJ37hmH5JxcbXiTB
-Oq/QOPCmKRNqqz8ojSSih5AdpCEnm4eojJ9Fflmc8RwRCfP3nOYeIEbvfh+Ufplf
-If7RJxVftfK+q0vEDSoD9b2Okmw4S8wYR+rxsWLCero4/5PzGEQgGty4f4Ld0GIO
-NJLFUMuKagu5lkB4mvun
-=sBBn
+iQJ8BAEBCgBmBQJT0LX/XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir1OwP/A7ICKag7P5hwedKH9Pjbiuu
+35IpAbQM6dWA98h9uPHz3zdsSolVzyHZmH0r2oYRQyHzqylyKb0LSYZi82ljij6K
+9JCePwZ/lSqFFKy4qy5kprha86aCPC5p8KCggCeUboK1hrBfk/kfCgA1Z04z8Ksx
+Qpo6J6sNND59Jp9LUNgmUcOdOTuzWQk48GeWo4d87a2MI3hROAEf9iWf0CtuIsDb
+355ItpehbWvEx4lESRVqDsPXlcGAiH0ypxRJ4N0wqPegpWM720Xxk/ze6Tra9xuY
+oLMCF6hnKMGh0+nkdhPKZgoioeeWd3i7jT2aVySd6xE29t5yYzrviP+ZOOhua6mA
++i4KqKXA+H1A1OoHKICSGlkBERI4pz0ANaGocQUJrENyjEVRzP3uzn6DedjS2gh8
+a7W3UW4dmK23nUKKykD4dNXWnR9keoYCwfgt5IFFVfOAHle5XEsuPiP2AY/wX/8Y
+P54whVJBx9RgDsV3Y6TkCuVL/L+JtDjNJA6FiXHW0HRD3SstSlle508kswMRgFYx
+efKZI+oXMTAozqQd2gleFMcvml2P2aUrgbBpwQgjQuj9Uoak2W5RTd7XAnS90HvK
+vvC55WDUDe8TAPsJhAu9O0e/V1t3HLp72rFyn2cAVM8ncNOJxbdarcx0niCGoqfM
+TXuxOsMteWBbJlTwaqqH
+=9Gzz
 -----END PGP SIGNATURE-----
