@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>sci-chemistry</herd>
-	<upstream>
-		<changelog>http://skuld.bmsc.washington.edu/raster3d/CHANGELOG</changelog>
-	</upstream>
-	<use>
-		<flag name="gd">libgd support for PNG and JPEG output</flag>
-	</use>
+  <herd>sci-chemistry</herd>
+  <upstream>
+    <changelog>http://skuld.bmsc.washington.edu/raster3d/CHANGELOG</changelog>
+  </upstream>
+  <use>
+    <flag name="gd">libgd support for PNG and JPEG output</flag>
+  </use>
 </pkgmetadata>
