@@ -1,6 +1,12 @@
 # ChangeLog for sci-chemistry/raster3d
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/raster3d/ChangeLog,v 1.34 2012/12/14 10:16:38 ulm Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/raster3d/ChangeLog,v 1.35 2014/07/24 07:30:06 jlec Exp $
+
+*raster3d-3.0.3 (24 Jul 2014)
+
+  24 Jul 2014; Justin Lecher <jlec@gentoo.org> +raster3d-3.0.3.ebuild,
+  metadata.xml:
+  Version Bump
 
   14 Dec 2012; Ulrich Müller <ulm@gentoo.org> raster3d-3.0.2.ebuild:
   Fix LICENSE, Artistic License, Version 2.0 according to HOMEPAGE.
