@@ -1,6 +1,12 @@
 # ChangeLog for app-shells/bash
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.374 2014/07/08 08:54:50 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.375 2014/07/24 07:09:55 polynomial-c Exp $
+
+*bash-4.3_p18-r4 (24 Jul 2014)
+
+  24 Jul 2014; Lars Wendler <polynomial-c@gentoo.org> -bash-4.3_p18-r2.ebuild,
+  +bash-4.3_p18-r4.ebuild, +files/bash-4.3-indirect-array-element.patch:
+  Revbump to fix a bug in array name expansion. Removed old.
 
 *bash-4.3_p18-r3 (08 Jul 2014)
 
